# AKTA

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: CROSS_REPO_CI.md
akta/: __init__.py  cards.py  classifier_plugins.py  classify.py  cli.py  consequentiality.py  context.py  errors.py  evaluate.py  evaluation_types.py  gate.py  grant_override.py  hash.py  overlays.py  policy.py  policy_integrity.py  policy_signing.py  records.py  review_context.py  review_decision.py  review_loop.py  review_packet.py  scope_contract.py  scope_mapping.py  session_grant_store.py  sibling_repos.py  structured_action_policy.py  tool_registry.py
docs/: PROTOCOL_v1.0.md  RELEASE.md  akta_card_guide.md  akta_v03_integration.md  authority_transfer.md  classifier_trust_boundary.md  deployment_reference.md  domain_overlay_guide.md  failure_class_taxonomy.md  field_thesis.md  holdout_private_governance.md  integration_guide.md  inter_rater_protocol.md  limitations.md  pcs_export.md  pf_core_bridge.md  policy_integrity.md  review_integration.md  scenario_labeling_guidelines.md  scientific_action_admissibility.md  scope_bridge.md  scope_live_conformance.md  threat_model.md  trusted_boundary.md  vsa_import.md
evals/: __init__.py  adversarial_transitions.py  before_after.py  behavioral_runner.py  graders.py  inter_rater.py  metrics.py  run_holdout_eval.py  run_oracle_independent.py  run_public_gate_derived.py  run_scenarios.py  transition_runner.py
examples/: akta_card.json
overlays/: README.md  biology_placeholder.yaml  biology_v0.yaml  chemistry_placeholder.yaml  chemistry_v0.yaml  clinical_placeholder.yaml  clinical_v0.yaml  computational_science_v0.yaml  generic_lab_v0.yaml  materials_expert_v0.yaml  materials_institutional_v1.yaml  materials_v0.yaml
policy/: action_ontology.yaml  admissibility_matrix.yaml  default_tool_registry.yaml  deployment_profiles.yaml  evidence_states.yaml  evidence_to_action_matrix.yaml  evidence_to_action_rules.yaml  policy_manifest.yaml  release_keys.yaml  release_manifest_v1.0.json  responsibility_levels.yaml  scope_grant_override_rules.yaml  structured_action_schema.yaml  tool_to_requested_scope.yaml  validation_statuses.yaml  verification_statuses.yaml
scenarios/: adversarial_transitions.jsonl  behavioral_middleware.jsonl  canonical_5.jsonl  classifier_edge_cases.jsonl  expected_decisions.jsonl  holdout_private.jsonl  invalid_cases.jsonl  labtrust_gym_imported.jsonl  oracle_independent.jsonl  public_100.jsonl  public_40.jsonl  public_gate_derived.jsonl
schemas/: akta_card.schema.json  akta_context.schema.json  akta_decision.schema.json  akta_record.schema.json  domain_overlay.schema.json  multi_agent_handoff.schema.json  pcs_akta_artifact.schema.json  pf_core_obligation.schema.json  review_decision.schema.json  review_trigger.schema.json  tool_registry.schema.json  vsa_scientific_report.schema.json
scripts/: demo_akta_scope_protocol_drift.py  demo_integrated_weak_evidence.py  demo_pf_runtime_proof.py  demo_reconstructable_experiment.py  demo_weak_evidence.py  (+14 more)
(+223 files in other folders)
