[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akta-protocol"
version = "0.8.0"
description = "Open protocol for deciding when AI-generated scientific outputs are admissible to shape what science does next"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AKTA Contributors" }]
keywords = ["scientific-action", "ai-for-science", "admissibility", "governance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "jsonschema>=4.20",
    "PyYAML>=6.0",
    "setuptools>=68",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
security = [
    "cryptography>=41.0",
]
# REST server uses stdlib http.server; no extra deps required in v0.1.
rest = []

[project.scripts]
akta = "akta.cli:main"
akta-rest = "adapters.generic_rest.server:main"
akta-oracle-eval = "evals.run_oracle_independent:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["akta*", "adapters*", "evals*"]

[tool.pytest.ini_options]
testpaths = ["tests", "skills/akta-scientific-action-admissibility/tests"]
pythonpath = ["."]
markers = [
    "integration: live cross-repo tests requiring sibling SCOPE checkout",
]
